--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
  <body>
   <header>
    <nav>
-    <div><a href="">My Logo</a></div>
+    <div class="icon"><a href="">My Logo</a></div>
     <div class="tonav">
      <i class="fa fa-bars"></i>
     </div>
    </nav>
   </header>
   <main>
-   <section>
+   <section class="about">
     <h1>I’m Saqib
      Glad to see you!</h1>
     <p>I’m a Full Stack Web developer! I can help you build a product , 
      feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
     <a href="">LET’S CONNECT</a>
-    <ul>
+    <ul class="social_media">
      <li><a href=""><i class="fa fa-twitter"></i></a></li>
      <li><a href=""><i class="fa fa-linkedin"></i></a></li>
      <li><a href=""><i class="fa fa-medium-m"></i></a></li>
