--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <ul class="social_media">
      <li><a href=""><i class="fa fa-twitter"></i></a></li>
      <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-     <li><a href=""><i class="fa fa-medium-m"></i></a></li>
+     <li><a href=""><i class="fa fa-medium"></i></a></li>
      <li><a href=""><i class="fa fa-github"></i></a></li>
      <li><a href=""><i class="fa fa-angellist"></i></a></li>
     </ul>
