Created recent work section
Created recent work section with 4 different sample projects

--- a/index.html
+++ b/index.html
@@ -33,5 +33,131 @@
     </ul>
    </section>
   </main>
+      <section class="about">
+        <h1>I’m Saqib Glad to see you!</h1>
+        <p>
+          I’m a Full Stack Web developer! I can help you build a product ,
+          feature or website Look through some of my work and experience! If you
+          like what you see and have a project you need coded, don’t hestiate to
+          contact me.
+        </p>
+        <a href="">LET’S CONNECT</a>
+        <ul class="social_media">
+          <li>
+            <a href=""><i class="fa fa-twitter"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa fa-linkedin"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa fa-medium"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa fa-github"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa fa-angellist"></i></a>
+          </li>
+        </ul>
+      </section>
+      <section class="work">
+        <div class="project">
+          <img src="assets/img/work1.png"alt="Image project"class="project_image"/>
+          <div class="general">
+            <h3>Shiz Pet Store</h3>
+            <div id="general_inf">
+              <p class="title">Microverse- Student</p>
+            </div>
+            <p class="project_description">
+              Shiz Pet Store is an ecommerce store for dropshipping pet related products...
+            </p>
+            <footer>
+              <ul class="skills">
+                <li>React</li>
+                <li>Redux</li>
+                <li>API REST</li>
+                <li>Javascript</li>
+                <li>JEST</li>
+                <li>CSS3</li>
+                <li>html5</li>
+              </ul>
+              <div class="external_link"><a href="#">See Project</a></div>
+            </footer>
+          </div>
+        </div>
+        <div class="project">
+          <img src="assets/img/work2.png"alt="Image project"class="project_image"/>
+          <div class="general">
+            <h3>Tonic</h3>
+            <div id="general_inf">
+              <p class="title">Microverse- Student</p>
+            </div>
+            <p class="project_description">
+              A daily selection of privately personalized reads; no accounts or sign-ups required.  
+            </p>
+            <footer>
+              <ul class="skills">
+                <li>React</li>
+                <li>Redux</li>
+                <li>API REST</li>
+                <li>Javascript</li>
+                <li>JEST</li>
+                <li>CSS3</li>
+                <li>html5</li>
+              </ul>
+              <div class="external_link"><a href="#">See Project</a></div>
+            </footer>
+          </div>
+        </div>
+        <div class="project">
+          <img src="assets/img/work3.png"alt="Image project"class="project_image"/>
+          <div class="general">
+            <h3>Multi-Post Stories</h3>
+            <div id="general_inf">
+              <p class="title">Microverse- Student</p>
+            </div>
+            <p class="project_description">
+              A daily selection of privately personalized reads; no accounts or sign-ups required.  
+            </p>
+            <footer>
+              <ul class="skills">
+                <li>React</li>
+                <li>Redux</li>
+                <li>API REST</li>
+                <li>Javascript</li>
+                <li>JEST</li>
+                <li>CSS3</li>
+                <li>html5</li>
+              </ul>
+              <div class="external_link"><a href="#">See Project</a></div>
+            </footer>
+          </div>
+        </div>
+        <div class="project">
+          <img src="assets/img/work4.png"alt="Image project"class="project_image"/>
+          <div class="general">
+            <h3>Multi-Post Stories</h3>
+            <div id="general_inf">
+              <p class="title">Microverse- Student</p>
+            </div>
+            <p class="project_description">
+              A daily selection of privately personalized reads; no accounts or sign-ups required.
+            </p>
+            <footer>
+              <ul class="skills">
+                <li>React</li>
+                <li>Redux</li>
+                <li>API REST</li>
+                <li>Javascript</li>
+                <li>JEST</li>
+                <li>CSS3</li>
+                <li>html5</li>
+              </ul>
+              <div class="external_link"><a href="#">See Project</a></div>
+            </footer>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
