Removed Linter Errors #2

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
         </div>
         <div class="project">
-          <img src="assets/img/work2.png"alt="Image project"class="project_image"/>
+          <img src="assets/img/work2.png" alt="Image project" class="project_image"/>
           <div class="general">
             <h3>Tonic</h3>
             <div id="general_inf_1">
@@ -205,9 +205,9 @@
                     <img class="hide"  src="assets/img/select.png" alt="selected" >
                   </div>
                 </div>
-                <div class="frams" style="display: none; flex-direction: column;">
+                <div class="frams">
                </div>
-              <div class="ligne" > <hr/>
+              <hr/>
               <div id="frameworks">
                 <div class="lisframes">
                   <p>Cloud plaforms & tools</p>
@@ -218,7 +218,7 @@
                 <div class="frams">
                 </div>
               </div>
-                 <div class="ligne"> <hr/>
+                  <hr/>
               </div>
             </div>   
         </section>
