Fixed Linter Errors #3

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           </div>
         </div>
         <div class="project">
-          <img src="assets/img/work3.png"alt="Image project"class="project_image"/>
+          <img src="assets/img/work3.png"alt="Image project" class="project_image" />
           <div class="general">
             <h3>Multi-Post Stories</h3>
             <div id="general_inf_2">
@@ -177,7 +177,7 @@
                 <div class="lisframes">
                     <p>Languages</p>
                     <div class="show-language">
-                       <img class="show" src="assets/img/fleche_dessous.png" alt="select" >
+                       <img class="show" src="assets/img/fleche_dessous.png" alt="select">
                     </div>
                 </div>
                 <ul id="programming">
@@ -208,10 +208,10 @@
                 <div class="frams">
                </div>
               <hr/>
-              <div id="frameworks">
+              <div id="frameworks1">
                 <div class="lisframes">
                   <p>Cloud plaforms & tools</p>
-                  <div class="show-frameworks">
+                  <div class="show-frameworks-1">
                     <img class="hide"  src="assets/img/select.png" alt="selected" >
                   </div>
                 </div>
