Highlighted issues fixed

--- a/index.html
+++ b/index.html
@@ -174,11 +174,12 @@
             </div>
             <div id="my_skills">
               <div id="languages_skills">
-                <div class="lisframes">
-                    <p>Languages</p>
-                    <div class="show-language">
-                       <img class="show" src="assets/img/fleche_dessous.png" alt="select">
-                    </div>
+                  <ul id="lisframes">
+                    <li>
+                      <p>Languages</p>
+                      <img src="assets/img/fleche_dessous.png" alt="select" class="show-language">
+                    </li>
+                    
                 </div>
                 <ul id="programming">
                      <li class="lang">
@@ -196,28 +197,20 @@
                 </ul>
               </div>
               <div>
-                <div> <hr/></div>
               </div>
               <div id="frameworks">
-                <div class="lisframes">
-                  <p>Frameworks</p>
-                  <div class="show-frameworks">
-                    <img class="hide"  src="assets/img/select.png" alt="selected" >
-                  </div>
-                </div>
-                <div class="frams">
-               </div>
+                  <li>
+                    <p>Frameworks</p>
+                    <img src="assets/img/select.png" alt="selected" class="show-language">
+                  </li>
               <hr/>
               <div id="frameworks1">
-                <div class="lisframes">
+                <li>
                   <p>Cloud plaforms & tools</p>
-                  <div class="show-frameworks-1">
-                    <img class="hide"  src="assets/img/select.png" alt="selected" >
-                  </div>
-                </div>
-                <div class="frams">
-                </div>
+                  <img src="assets/img/select.png" alt="selected" class="show-language">
+                </li>
               </div>
+            </ul>
                   <hr/>
               </div>
             </div>   
