Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -203,15 +203,13 @@
                     <p>Frameworks</p>
                     <img src="assets/img/select.png" alt="selected" class="show-language">
                   </li>
-              <hr/>
-              <div id="frameworks1">
+              <div><hr/></div>
                 <li>
                   <p>Cloud plaforms & tools</p>
                   <img src="assets/img/select.png" alt="selected" class="show-language">
                 </li>
-              </div>
+                <div><hr/></div>
             </ul>
-                  <hr/>
               </div>
             </div>   
         </section>
