--- a/index.html
+++ b/index.html
@@ -203,12 +203,12 @@
                     <p>Frameworks</p>
                     <img src="assets/img/select.png" alt="selected" class="show-language">
                   </li>
-              <div><hr/></div>
+                  <img src="assets/img/separator.png" width="100%" height="1">
                 <li>
                   <p>Cloud plaforms & tools</p>
                   <img src="assets/img/select.png" alt="selected" class="show-language">
                 </li>
-                <div><hr/></div>
+                <img src="assets/img/separator.png" width="100%" height="1">
             </ul>
               </div>
             </div>   
