Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -202,14 +202,14 @@
                   <li>
                     <p>Frameworks</p>
                     <img src="assets/img/select.png" alt="selected" class="show-language">
+                    <img src="assets/img/separator.png" width="100%" height="2" alt="seprator">
                   </li>
-                  <img src="assets/img/separator.png" width="100%" height="1">
                 <li>
                   <p>Cloud plaforms & tools</p>
                   <img src="assets/img/select.png" alt="selected" class="show-language">
+                  <img src="assets/img/separator.png" width="100%" height="2" alt="seprator">
                 </li>
-                <img src="assets/img/separator.png" width="100%" height="1">
-            </ul>
+              </ul>
               </div>
             </div>   
         </section>
