Fixed linter errors

--- a/index.html
+++ b/index.html
@@ -202,12 +202,12 @@
                   <li>
                     <p>Frameworks</p>
                     <img src="assets/img/select.png" alt="selected" class="show-language">
-                    <img src="assets/img/separator.png" width="100%" height="2" alt="seprator">
+                    <img src="assets/img/separator.png" height="2" alt="seprator" class="separator">
                   </li>
                 <li>
                   <p>Cloud plaforms & tools</p>
                   <img src="assets/img/select.png" alt="selected" class="show-language">
-                  <img src="assets/img/separator.png" width="100%" height="2" alt="seprator">
+                  <img src="assets/img/separator.png" height="2" alt="seprator" class="separator">
                 </li>
               </ul>
               </div>
