Created main menu for desktop version

--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
   <header>
    <nav>
     <div class="icon"><a href="">My Logo</a></div>
-    <div class="tonav">
+    <div class="topnav">
      <i class="fa fa-bars"></i>
     </div>
+    <div class="topnavdesktop">
+      <ul class="mainmenu">
+        <li>Portfolio</li>
+        <li>About</li>
+        <li>Contact</li>
+      </ul>
+     </div>
    </nav>
   </header>
   <main>
