--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </section>
         <section id="about_me">
             <div class="data-inf">
-              <h1>About<br> Myself</h1>
+              <h2>About<br> Myself</h2>
               <p id="presentation"> I’m a Full Stack Web developer! I can help you build a product ,
                 feature or website Look through some of my work and experience! If you
                 like what you see and have a project you need coded, don’t hestiate to
@@ -184,7 +184,7 @@
                   <ul id="lisframes">
                     <li>
                       <p>Languages</p>
-                      <img src="assets/img/fleche_dessous.png" alt="select" class="show-language">
+                      <img src="assets/img/fleche_dessous.png" alt="select" class="show-languagee">
                     </li>
                     </ul>
                 <ul id="programming">
