removed linter errrors

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    </nav>
   </header>
   <main>
-      <section class="about">
+      <section id="about">
         <h1>I’m Saqib Glad to see you!</h1>
         <p>
           I’m a Full Stack Web developer! I can help you build a product ,
