Updated link of JS file

--- a/index.html
+++ b/index.html
@@ -233,6 +233,6 @@
       </form>
         </section>
     </main>
-    <script src="js/script.js"> </script>
+    <script src="assets/script.js"> </script>
   </body>
 </html>
