--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <h2>Contact me</h2>
           <p>If you have an application you are interested in developing, 
             a feature that you need built or a project that needs coding. 
-            I’d love to help with it </p>
+            I’d love to help with it.</p>
             </div>
         <form action="https://formspree.io/f/mlezzawk" method="post">
           <input type="text" id="fullname" name="fullname" placeholder="Your name.." required maxlength="30">
