--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 
       <nav class="hamburger"><img src="assets/img/menu.png" alt="Menu"></nav>
       <ul class="mainmenu">
+        <li><a href="#"></a></li>
          <li><a href="#work">Portfolio</a></li>
          <li><a href="#about_me">About</a></li>
          <li><a href="#contact"> Contact </a></li>
       </ul>
+    </nav>
   </header>
   <main>
       <section id="about">
