--- a/index.html
+++ b/index.html
@@ -52,103 +52,7 @@
         </ul>
       </section>
     </div>
-      <section class="work" id="work">
-        <div class="project">
-          <img src="assets/img/work1.png" alt="Image project" class="project_image"/>
-          <div class="general">
-            <h3>Shiz Pet Store</h3>
-            <div id="general_inf">
-              <p class="title">Microverse- Student</p>
-            </div>
-            <p class="project_description">
-              Shiz Pet Store is an ecommerce store for dropshipping pet related products...
-            </p>
-            <footer>
-              <ul class="skills">
-                <li>React</li>
-                <li>Redux</li>
-                <li>API REST</li>
-                <li>Javascript</li>
-                <li>JEST</li>
-                <li>CSS3</li>
-                <li>html5</li>
-              </ul>
-              <div class="external_link"><a href="#">See Project</a></div>
-            </footer>
-          </div>
-        </div>
-        <div class="project">
-          <img src="assets/img/work2.png" alt="Image project" class="project_image"/>
-          <div class="general">
-            <h3>Tonic</h3>
-            <div id="general_inf_1">
-              <p class="title">Microverse- Student</p>
-            </div>
-            <p class="project_description">
-              A daily selection of privately personalized reads; no accounts or sign-ups required.  
-            </p>
-            <footer>
-              <ul class="skills">
-                <li>React</li>
-                <li>Redux</li>
-                <li>API REST</li>
-                <li>Javascript</li>
-                <li>JEST</li>
-                <li>CSS3</li>
-                <li>html5</li>
-              </ul>
-              <div class="external_link"><a href="#">See Project</a></div>
-            </footer>
-          </div>
-        </div>
-        <div class="project">
-          <img src="assets/img/work3.png" alt="Image project" class="project_image"/>
-          <div class="general">
-            <h3>Multi-Post Stories</h3>
-            <div id="general_inf_2">
-              <p class="title">Microverse- Student</p>
-            </div>
-            <p class="project_description">
-              A daily selection of privately personalized reads; no accounts or sign-ups required.  
-            </p>
-            <footer>
-              <ul class="skills">
-                <li>React</li>
-                <li>Redux</li>
-                <li>API REST</li>
-                <li>Javascript</li>
-                <li>JEST</li>
-                <li>CSS3</li>
-                <li>html5</li>
-              </ul>
-              <div class="external_link"><a href="#">See Project</a></div>
-            </footer>
-          </div>
-        </div>
-        <div class="project">
-          <img src="assets/img/work4.png" alt="Image project" class="project_image"/>
-          <div class="general">
-            <h3>Multi-Post Stories</h3>
-            <div id="general_inf_3">
-              <p class="title">Microverse- Student</p>
-            </div>
-            <p class="project_description">
-              A daily selection of privately personalized reads; no accounts or sign-ups required.
-            </p>
-            <footer>
-              <ul class="skills">
-                <li>React</li>
-                <li>Redux</li>
-                <li>API REST</li>
-                <li>Javascript</li>
-                <li>JEST</li>
-                <li>CSS3</li>
-                <li>html5</li>
-              </ul>
-              <div class="external_link"><a href="#">See Project</a></div>
-            </footer>
-          </div>
-        </div>
+      <section id="work">
       </section>
         <section id="about_me">
             <div class="data-inf">
@@ -236,5 +140,6 @@
         </section>
     </main>
     <script src="assets/script.js"> </script>
+    <script src="assets/popup.js"> </script>
   </body>
 </html>
