--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>   
         </section>
         <section class="contact-section" id="contact">
+          <div class="wrap">
           <div class="txt">
           <h2>Contact me</h2>
           <p>If you have an application you are interested in developing, 
@@ -133,10 +134,13 @@
             </div>
         <form action="https://formspree.io/f/mlezzawk" method="post">
           <input type="text" id="fullname" name="fullname" placeholder="Your name.." required maxlength="30">
-          <input type="email" id="emailaddress" name="emailaddress" placeholder="Your Email Address" required>
+          <input type="email" id="emailaddress" name="email" placeholder="Your Email Address" required>
           <textarea name="content" id="textarea" cols="30" rows="10" required maxlength="500" placeholder="Write your message here"></textarea>
-        <input type="submit" id="submitBtn" value="Get In Touch" />
+        <input type="submit" name="submit" id="submitBtn" value="Get In Touch" />
+        <span></span>
       </form>
+    </div>
+   </div>
         </section>
     </main>
     <script src="assets/script.js"> </script>
