Revert "styling for error message"
This reverts commit 9d8a038de4587946bec453a037d97ecf74f84c88.

--- a/index.html
+++ b/index.html
@@ -133,10 +133,12 @@
             </div>
         <form action="https://formspree.io/f/mlezzawk" method="post">
           <input type="text" id="fullname" name="fullname" placeholder="Your name.." required maxlength="30">
-          <input type="email" id="emailaddress" name="emailaddress" placeholder="Your Email Address" required>
+          <input type="email" id="emailaddress" name="email" placeholder="Your Email Address" required>
           <textarea name="content" id="textarea" cols="30" rows="10" required maxlength="500" placeholder="Write your message here"></textarea>
-        <input type="submit" id="submitBtn" value="Get In Touch" />
+        <input type="submit" name="submit" id="submitBtn" value="Get In Touch" />
+        <span></span>
       </form>
+    </div>
         </section>
     </main>
     <script src="assets/script.js"> </script>
