Added changes required for form validation

--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>   
         </section>
         <section class="contact-section" id="contact">
+          <div class="wrap">
           <div class="txt">
           <h2>Contact me</h2>
           <p>If you have an application you are interested in developing, 
@@ -138,7 +139,8 @@
         <input type="submit" name="submit" id="submitBtn" value="Get In Touch" />
         <span></span>
       </form>
-    </div>
+      <hr class="bottom-bar">
+      </div>
         </section>
     </main>
     <script src="assets/script.js"> </script>
