--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@
             I’d love to help with it.</p>
             </div>
         <form action="https://formspree.io/f/mlezzawk" method="post">
-          <input type="text" id="fullname" name="fullname" placeholder="Your name.." required maxlength="30">
+          <input type="text" id="fullname" name="name" placeholder="Your name.." required maxlength="30">
           <input type="email" id="emailaddress" name="email" placeholder="Your Email Address" required>
-          <textarea name="content" id="textarea" cols="30" rows="10" required maxlength="500" placeholder="Write your message here"></textarea>
+          <textarea name="content" id="message" cols="30" rows="10" required maxlength="500" placeholder="Write your message here"></textarea>
         <input type="submit" name="submit" id="submitBtn" value="Get In Touch" />
         <span></span>
       </form>
